--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "razorpay": "^2.9.6",
+    "serverless-http": "^3.2.0",
     "validator": "^13.15.0"
   }
 }
