--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.21",
     "esbuild-plugin-html": "^1.0.0",
     "eslint": "^9.21.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
